WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260704
WebAutomationSession should use CheckedPtr instead of a raw pointer
https://bugs.webkit.org/show_bug.cgi?id=260704
Summary
WebAutomationSession should use CheckedPtr instead of a raw pointer
Ryosuke Niwa
Reported
2023-08-25 00:37:41 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2023-08-25 00:40:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17059
EWS
Comment 2
2023-08-25 16:28:52 PDT
Committed
267305@main
(6ece913af495): <
https://commits.webkit.org/267305@main
> Reviewed commits have been landed. Closing PR #17059 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-08-25 16:29:14 PDT
<
rdar://problem/114475928
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug