WebAutomationSession should use CheckedPtr instead of a raw pointer https://bugs.webkit.org/show_bug.cgi?id=260704

Reviewed by Patrick Angle and Chris Dumez.

Deployed smart pointers in WebAutomationSession.

* Source/WebKit/UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::setProcessPool):
(WebKit::WebAutomationSession::protectedProcessPool const):
(WebKit::WebAutomationSession::getNextContext):
(WebKit::WebAutomationSession::getBrowsingContexts):
(WebKit::WebAutomationSession::waitForNavigationToComplete):
(WebKit::WebAutomationSession::respondToPendingFrameNavigationCallbacksWithTimeout):
* Source/WebKit/UIProcess/Automation/WebAutomationSession.h:
* Source/WebKit/UIProcess/WebProcessPool.h:

Canonical link: https://commits.webkit.org/267305@main